objects/Other_Product_Related_To_Article__c.object
<CustomObject>
    <description>Saves other products and its feature,Release Code related to article</description>
    <fields>
        <fullName>Article__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Article Lookup</description>
        <label>Article</label>
        <referenceTo>Article__c</referenceTo>
        <relationshipLabel>Other Products Related To Article</relationshipLabel>
        <relationshipName>Other_Products_Related_To_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Version</label>
        <referenceTo>Product_Feature_Version__c</referenceTo>
        <relationshipLabel>Other Products Related To Article</relationshipLabel>
        <relationshipName>Other_Products_Related_To_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Other Products Related To Article</relationshipLabel>
        <relationshipName>Other_Products_Related_To_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Platform__c</fullName>
        <formula>productClass__r.Cadence_Platform__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseProductList__c</fullName>
        <label>ReleaseProductList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>productClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>productClass</label>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Other Products Related To Article</relationshipLabel>
        <relationshipName>Other_Products_Related_To_Article</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>productFeatureList__c</fullName>
        <label>productFeatureList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Other Product Related To Article</label>
    <nameField>
        <label>Other Product Related To Article Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Products Related To Article</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>